# argus

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_multi.py
src/argus/: config.py  exceptions.py  logger.py
src/argus/detection/: infer.py  model.py
src/argus/pipeline/: worker.py
src/argus/streams/: camera.py  manager.py
src/argus/utils/: io.py  visualize.py
