[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "argus"
version = "0.1.0"
description = "Real-time multi-camera object and animal detection system"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  { name = "Your Name" }
]

dependencies = [
  "ultralytics>=8.0.0",
  "torch>=2.0.0",
  "torchvision>=0.15.0",
  "opencv-python>=4.8.0",
  "numpy>=1.23",
  "pandas>=1.5",
  "tqdm>=4.65",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "black>=23.0",
  "ruff>=0.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
